--- a/.github/workflows/ADOtoGitHubSync.yml
+++ b/.github/workflows/ADOtoGitHubSync.yml
@@ -1,8 +1,7 @@
 name: Sync TFS to GitHub
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Run every day at midnight UTC
+  workflow_dispatch:
 
 jobs:
   sync:
