--- a/.github/workflows/ADOtoGitHubSync.yml
+++ b/.github/workflows/ADOtoGitHubSync.yml
@@ -7,8 +7,9 @@ jobs:
  build:
   runs-on: windows-latest
   steps:
-   - name: Checkout repository
-     uses: actions/checkout@v2
-   # - name: run Poweshell script
-   #   run: |
-   #    pwsh 
+      - name: Check out repo        
+        uses: actions/checkout@v2
+      - name: run Poweshell script
+        run: |
+         pwsh ./.github/workflows/SynADOtoGitHub.ps1
+        shell: pwsh 
